<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.arcticsoft</groupId>
	<artifactId>javafx-tile-based-drawing</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>PlottingFX</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>23</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>23.0.2</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<mainClass>com.arcticsoft.tiledrawing.TileBasedDrawing</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<version>0.10.5</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>build-native</id>
						<goals>
							<goal>compile-no-fork</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<buildArgs>
						--no-fallback
						--enable-preview
						-H:+UnlockExperimentalVMOptions
						-H:ReflectionConfigurationFiles=src/main/resources/META-INF/native-image/reflect-config.json
						--add-modules=javafx.controls,javafx.graphics,javafx.fxml
					</buildArgs>
					<mainClass>com.arcticsoft.tiledrawing.TileBasedDrawing</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>